# upwork-tests

./: .gitignore
Expert-cross-platform-C++-developer-for-ongoing-full-time-work-as-part-of-a-team/: CMakeLists.txt  build.cmd
Expert-cross-platform-C++-developer-for-ongoing-full-time-work-as-part-of-a-team/include/robot/: myRobot.hpp  robotCommands.hpp  robotSdk.hpp
Expert-cross-platform-C++-developer-for-ongoing-full-time-work-as-part-of-a-team/test/: test.cpp
